Update Docker Compose configuration to include 'ml' and 'backend' networks for improved service connectivity

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -37,6 +37,7 @@ services:
     restart: unless-stopped
     networks:
       - backend
+      - ml
     logging:
       driver: "json-file"
       options:
@@ -57,6 +58,7 @@ services:
     restart: unless-stopped
     networks:
       - ml
+      - backend
     logging:
       driver: "json-file"
       options:
