Comment out SSL volume configuration in production Docker Compose file

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -23,8 +23,8 @@ services:
       - frontend
       - backend
       - ml
-    volumes:
-      # - ./ssl:/etc/ssl:ro
+    # volumes:
+    # - ./ssl:/etc/ssl:ro
     logging:
       driver: "json-file"
       options:
