Enhance Nginx configuration with additional security headers and timeout settings, and add health check endpoint

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -44,6 +44,16 @@ server {
         # for cookie forwarding
         proxy_cookie_path / "/; HTTPOnly; Secure; SameSite=None";
         proxy_cookie_domain localhost cybersecurity.neiu.edu;
+
+        # Additional headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
     
     # API routing
@@ -60,5 +70,16 @@ server {
         # for cookie forwarding
         proxy_cookie_path / "/; HTTPOnly; Secure; SameSite=None";
         proxy_cookie_domain localhost cybersecurity.neiu.edu;
+
+        # Timeouts
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+    }
+
+    # Health check endpoint
+    location /health {
+        return 200 "OK";
+        add_header Content-Type text/plain;
     }
 }
