Update CORS configuration in Docker Compose and enhance Nginx settings with security headers and improved proxy handling

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -14,14 +14,16 @@ upstream backend_servers {
 # HTTP redirect to HTTPS
 server {
     listen 80;
-    server_name cybersecurity.neiu.edu;
+    # server_name cybersecurity.neiu.edu;
+    server_name acosus.neiu.edu;
     return 301 https://$host$request_uri;
 }
 
 # HTTPS server
 server {
     listen 443 ssl;
-    server_name cybersecurity.neiu.edu;
+    # server_name cybersecurity.neiu.edu;
+    server_name acosus.neiu.edu;
     
     # SSL configuration
     ssl_certificate "/etc/pki/nginx/server.crt";
@@ -32,24 +34,39 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     # ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305';
+
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # Global CORS pre-flight handling
+    # map $request_method $cors_method {
+    #     OPTIONS 1;
+    #     default 0;
+    # }
     
     # Frontend routing
     location / {
         proxy_pass http://frontend_servers;
         proxy_http_version 1.1;
+
+        # Critical headers for CORS and proxy setup
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        
+        # IMPORTANT: Preserve Origin header for CORS to work
+        proxy_set_header Origin $http_origin;
         # for cookie forwarding
         proxy_cookie_path / "/; HTTPOnly; Secure; SameSite=None";
-        proxy_cookie_domain localhost cybersecurity.neiu.edu;
+        proxy_cookie_domain localhost cybersecurity.neiu.edu acosus.neiu.edu;
 
-        # Additional headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        
         # Timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
@@ -62,14 +79,21 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+
+        # Critical headers for CORS and proxy setup
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        
+        # IMPORTANT: Preserve Origin header for CORS to work
+        proxy_set_header Origin $http_origin;
 
         # for cookie forwarding
         proxy_cookie_path / "/; HTTPOnly; Secure; SameSite=None";
-        proxy_cookie_domain localhost cybersecurity.neiu.edu;
+        proxy_cookie_domain localhost cybersecurity.neiu.edu acosus.neiu.edu;
 
         # Timeouts
         proxy_connect_timeout 300s;
