--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,6 +1,4 @@
-# Current Production Configuration for Nginx
-# This is the main configuration file for Nginx.
-
+# acosus-on-premise-server /etc/nginx/nginx.conf
 # For more information on configuration, see:
 #   * Official English Documentation: http://nginx.org/en/docs/
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
@@ -43,11 +41,11 @@ http {
         listen       [::]:80;
         server_name  _;
 
-	#Default:
-	#root         /usr/share/nginx/html;
+        #Default:
+        #root         /usr/share/nginx/html;
 
-	#Added by AT 4/7/2025
-	root	/mnt/data/www/html;
+        #Added by AT 4/7/2025
+        root    /mnt/data/www/html;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
@@ -67,7 +65,7 @@ http {
         listen       443 ssl http2;
         listen       [::]:443 ssl http2;
         server_name  _;
-	root    /mnt/data/www/html;
+        root    /mnt/data/www/html;
 #        root         /usr/share/nginx/html;
 #
         ssl_certificate "/etc/pki/nginx/server.crt";
