Update Nginx configuration for cybersecurity server, correcting server name and enhancing security headers

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,4 +1,4 @@
-# acosus-on-premise-server /etc/nginx/nginx.conf
+# cybersecurity-on-premise-server main nginx.conf located at: /etc/nginx/nginx.conf
 # For more information on configuration, see:
 #   * Official English Documentation: http://nginx.org/en/docs/
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
