--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,3 +1,4 @@
+# cybersecurity on-premise nginx conf location: /etc/nginx/conf.d/acosus.conf
 upstream frontend_servers {
     least_conn;
     server 127.0.0.1:8081;
@@ -14,17 +15,15 @@ upstream backend_servers {
 # HTTP redirect to HTTPS
 server {
     listen 80;
-    # server_name cybersecurity.neiu.edu;
-    server_name acosus.neiu.edu;
+    server_name cybersecurity.neiu.edu;
     return 301 https://$host$request_uri;
 }
 
 # HTTPS server
 server {
     listen 443 ssl;
-    # server_name cybersecurity.neiu.edu;
-    server_name acosus.neiu.edu;
-    
+    server_name cybersecurity.neiu.edu;
+
     # SSL configuration
     ssl_certificate "/etc/pki/nginx/server.crt";
     ssl_certificate_key "/etc/pki/nginx/private/server.key";
@@ -35,65 +34,43 @@ server {
     ssl_prefer_server_ciphers on;
     # ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305';
 
-    # Security headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-    # Global CORS pre-flight handling
-    # map $request_method $cors_method {
-    #     OPTIONS 1;
-    #     default 0;
-    # }
-    
     # Frontend routing
     location / {
         proxy_pass http://frontend_servers;
         proxy_http_version 1.1;
-
-        # Critical headers for CORS and proxy setup
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        
-        # IMPORTANT: Preserve Origin header for CORS to work
-        proxy_set_header Origin $http_origin;
+        proxy_set_header X-Forwarded-Proto https;
         # for cookie forwarding
         proxy_cookie_path / "/; HTTPOnly; Secure; SameSite=None";
-        proxy_cookie_domain localhost cybersecurity.neiu.edu acosus.neiu.edu;
+        proxy_cookie_domain localhost cybersecurity.neiu.edu;
+
+        # Additional headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
 
         # Timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
-    
+
     # API routing
     location /api {
         proxy_pass http://backend_servers;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-
-        # Critical headers for CORS and proxy setup
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        
-        # IMPORTANT: Preserve Origin header for CORS to work
-        proxy_set_header Origin $http_origin;
+        proxy_set_header X-Forwarded-Proto https;
 
         # for cookie forwarding
         proxy_cookie_path / "/; HTTPOnly; Secure; SameSite=None";
-        proxy_cookie_domain localhost cybersecurity.neiu.edu acosus.neiu.edu;
+        proxy_cookie_domain localhost cybersecurity.neiu.edu;
 
         # Timeouts
         proxy_connect_timeout 300s;
